Initial commit: Add custom features and Firebase integration

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌳</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>FamilyTree demo</title>
+    <meta name="description" content="गंगवा वंशावली - Gangwa Family Tree" />
+    <title>गंगवा वंशावली</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
